--- a/styles/styles.css
+++ b/styles/styles.css
@@ -868,6 +868,27 @@ label[for=toggle]:focus {
     width: 50%;
   }
 }
+@media (max-width: 850px) {
+  .profile {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .profile img {
+    width: 40%;
+  }
+
+  .profileText {
+    width: 100%;
+  }
+
+  .skillsIcons {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+  }
+}
 /* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
   .skillsIcons i {
